# valhali

./: Cargo.toml  README.md  flake.nix
avahi-zbus/: Cargo.toml
avahi-zbus/src/: lib.rs  types.rs
etc/valhali/: config.toml
valhali/: Cargo.toml
valhali/src/: lib.rs  main.rs  name.rs  rdata.rs  record.rs  service.rs  status.rs
valhalid/: Cargo.toml
valhalid/src/: encode.rs  main.rs
