[package]
name = "valhali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
avahi-zbus = { path = "../avahi-zbus" }
tokio = { version = "1.37.0", features = ["full"] }
zbus = "4.2"
