[package]
name = "valhali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"

[[bin]]
name = "daemon"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
avahi-zbus = { path = "../avahi-zbus" }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8"
serde = "1"
zbus = "4.2"
tracing = "0.1"
tracing-subscriber = "0.3.0"
garde = "0.18.0"
thiserror = "1"
