[package]
name = "valhali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "valhali"
path = "src/bin/cli.rs"

[[bin]]
name = "valhalid"
path = "src/bin/daemon.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
avahi-zbus = { path = "../avahi-zbus" }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8"
serde = "1"
serde_with = "3.8"
zbus = { version = "4.2", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
# garde = "0.18.0"
thiserror = "1"
